--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
