--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.2",
-    "multer": "^1.4.0"
+    "multer": "^1.4.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
